# translator-rs

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.sh  build_linux.sh  build_windows.ps1  release.bat  release.sh
.cargo/: config.toml
src/: deepl_api.rs  errors.rs  google_api.rs  gui.rs  main.rs  utils.rs
vids/: example.m4v  example.webm
