[package]
name = "rust-translator"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0", features = ["json", "blocking", "socks"] }
serde_json = "1"
colored = "2"
chrono = "0"
cli-clipboard = "0"
# 3.2 has default_missing_value option
clap = { version = "3.2", features = ["derive"] }
# tui = "0.19"
# crossterm = "0.25"
# unicode-width = "0.1"
# cursive = "0.20"
