[package]
name = "translator-rs"
version = "0.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "^0", features = ["vendored"] }

[dependencies]
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0", features = ["json", "blocking", "socks"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
colored = "^2"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
anyhow = "^1"
